# expression-inserter

./: .travis.yml  CMakeLists.txt  Doxyfile  README.md
include/expression_inserter/: arithmetic_expression.h  comparison_expression.h  condition_type.h  expression_inserter.h  keyword_type.h  keywords.h  logical_expression.h  main_operator.h  value_type.h  wrappers.h
tests/: CMakeLists.txt  basic_test.cc  vector_test.cc
